--- a/style.css
+++ b/style.css
@@ -11,6 +11,18 @@
     background-color: salmon;
     text-align: left;
 }
+.fish-Container {
+    width: 100%;
+    border-bottom: 2px solid black;
+    padding: 10px;
+}
+
+.fish {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+}
 
 h2 {
     text-align: left;
@@ -24,4 +36,14 @@ h2 {
 p {
     text-align: left;
     text-indent: 4%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: lightslategrey;
+}
+
+footer {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
+  color: #555;
+  margin-top: 40px;
 }
