--- a/style.css
+++ b/style.css
@@ -5,11 +5,19 @@
     font-family: "Righteous", sans-serif;
     font-weight: 400;
     font-style: normal;
+    margin: 0%;
+    padding: 0%;
+    width: 100%;
+    height: 100%;
 }
 
 .nav {
     background-color: salmon;
     text-align: left;
+    margin: 0%;
+    padding: 0%;
+    width: 100%;
+    height: 100%;
 }
 .fish-Container {
     width: 100%;
@@ -22,6 +30,7 @@
     margin: 0 auto;
     max-width: 100%;
     height: auto;
+    padding: 0%;
 }
 
 h2 {
@@ -45,5 +54,18 @@ footer {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 0.9rem;
   color: #555;
+  background-color: lightgray;
   margin-top: 40px;
+}
+
+table {
+  border: 1px solid black;
+  margin: 20px auto;
+}
+
+th, td {
+  border: 1px solid black;
+  padding: 8px 12px;
+  text-align: center;
+  font-weight: bold;
 }
