--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ footer {
 table {
   border: 1px solid black;
   margin: 20px auto;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 th, td {
